# wwe-universe-manager

./: .env  .gitignore  CLAUDE.md  CODING_STANDARDS.md  Cargo.toml  DEVELOPER_REFERENCE.md  Makefile  README.md  UI_GUIDE.md  diesel.toml  index.html  package-lock.json  package.json  run_tests.sh  rustfmt.toml  tailwind.config.js  wrestling_match_types.md
.github/: BRANCH_PROTECTION.md
.github/workflows/: ci.yml  pr-checks.yml  release.yml
docs/: development.mdx  introduction.mdx  mint.json  quickstart.mdx
docs/api-reference/: introduction.mdx
docs/architecture/: database-schema.mdx  overview.mdx
docs/components/: booker-dashboard.mdx  create-show.mdx  dashboard.mdx  shared-types.mdx  wrestler-details-window.mdx
docs/features/: match-booking.mdx  multi-window-interface.mdx  power-ratings.mdx  show-management.mdx  show-rosters.mdx  test-data.mdx  wrestler-management.mdx
migrations/: README.md
migrations/2025-03-14-051438_create_users/: up.sql
migrations/2025-03-14-051444_create_wrestlers/: down.sql  up.sql
migrations/2025-03-14-051501_create_titles/: down.sql  up.sql
migrations/2025-03-30-043153_create_shows/: up.sql
migrations/2025-06-26-055956_add_timestamps_and_constraints/: down.sql  up.sql
migrations/2025-07-27-220940_enhance_wrestler_details/: down.sql  up.sql
migrations/2025-07-28-051318_add_is_user_created_to_wrestlers/: down.sql  up.sql
src/: app.rs  constants.rs  errors.rs  main.rs  types.rs  wrestler_main.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: auth.rs  (+5 more)
style/: output.css  style.css  tailwind.css
(+146 files in other folders)
